0.204  2023-08-15
  [Incompatibe Changes]
    The following methods are removed from IO::File and IO::Handle.
    
      method syswrite : int ($buffer : string, $length : int, $offset : int = 0);
      
      method sysread : int ($buffer : mutable string, $length : int, $offset : int = 0);
  [Changes]
  
    The following methods in IO::File and IO::Handle are changed.
      
      -  method write : int ($buffer : string, $length : int, $offset : int = 0);
      +  method write : int ($string : string, $length : int = -1, $offset : int = 0);
      
      -  method read : int ($buffer : mutable string, $length : int, $offset : int = 0);
      +  method read : int ($string : mutable string, $length : int = -1, $offset : int = 0);
      
0.203  2023-08-15
  [New Features]
    The following method is added to IO::Socket.
    
      method peerport : int ();
      
      method peerhost : string ();
    
0.202001  2023-05-29
  [Prerequirement Changes]
    * SPVM 0.986+ is required.
0.202  2023-05-23
  [Incompatibe Changes]
    * The definition of the following methods in the IO::Handle class are changed.
      [Before]
      method printf : int ($format : string, $args : object[]...);
      [After]
      method printf : int ($format : string, $args : object[]);
      
0.201  2023-05-23
  [License Change]
    * The license is changed to MIT License.
  [Prerequirement Changes]
    * SPVM 0.981+ is required.
  [New Features]
    * The version string can be got.
0.20  2023-03-20
  [Internal Compatible Changes]
    * Use SPVM::ExchangeAPI method instead of SPVM functions.
0.19 2023-03-15
  [Prerequirement Changes]
    * SPVM::Sys 0.43+ is needed.
0.18 2023-03-06
  [Prerequirement Changes]
    * SPVM 0.9695+ is needed.
  [Changes]
    * Removed the unused IO::Util class.
  [Incompatible Changes]
    * Removed IO::Handle::Interface.
    * Removed IO::Socket::Interface.
    * Removed the has_interfaces method in the IO::Handle.
0.17 2023-03-06
  [Changes]